--- a/layer.yaml
+++ b/layer.yaml
@@ -1,1 +1,1 @@
-includes: ['layer:basic', 'layer:nginx', 'layer:ruby']
+includes: ['layer:basic', 'layer:layers/nginx', 'layer:layers/ruby', 'layer:nodejs']
