add mysql interface
Signed-off-by: Adam Stokes <adam.stokes@ubuntu.com>

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -9,3 +9,6 @@ description: |
   server. You always know who has your data. You do.
 maintainers: ['Adam Stokes <adam.stokes@ubuntu.com>']
 tags: ['ruby', 'monitoring']
+requires:
+  database:
+    interface: mysql
